# pspp

./: .gitattributes  .gitignore  AUTHORS  Bug-administration  INSTALL  Makefile.am  NEWS  ONEWS  README  README.Git  Smake  THANKS  acinclude.m4  configure.ac  org.fsf.pspp.xml  pspp-mode.el
Windows/: AdvUninstLog.nsh  MUI_EXTRAPAGES.nsh  README  automake.mk  build-dependencies  pspp.nsi
build-aux/: .gitignore  automake.mk  png-add-comment  svg2png
doc/: .gitignore  automake.mk  bugs.texi  combining.texi  command-index.texi  concept-index.texi  data-io.texi  data-selection.texi  doc-make.in  expressions.texi  fdl.texi  files.texi  flow-control.texi  function-index.texi  get-commands.pl  get-commands.py  installing.texi  introduction.texi  invoking.texi  language.texi  license.texi  matrices.texi  not-implemented.texi  org.fsf.pspp.desktop.in  org.fsf.pspp.metainfo.xml.in  org.gnu.pspp.desktop.in  org.gnu.pspp.metainfo.xml.in  prepdoc.sh  pspp-convert.texi  pspp-dev.texi  pspp-dump-sav.texi  pspp-manual.css  pspp-output.texi  pspp.texi  psppire.1  regression.texi  screengrab  statistics.texi  transformation.texi  tutorial.stt  (+3 more)
doc/dev/: concepts.texi  data.texi  encrypted-file-wrappers.texi  gui.texi  i18n.texi  (+11 more)
examples/: automake.mk  horticulture.sav  nhtsa-drinking-2008.sav  nhtsa-drinking-2008.sps  nhtsa.sav  personnel.sav  physiology.sav  regress_categorical.sps  repairs.sav  t-test.sps
glade/: automake.mk  psppire.xml
lib/: automake.mk
perl-module/: Changes  Examples.pod  Makefile.PL  PSPP.xs  README  automake.mk  ppport.h  typemap
po/: ChangeLog  LINGUAS  Makevars  ar.po  automake.mk  ca.po  cs.po  cs.po,aux  de.po  el.po  en_GB.po  es.po  fr.po  gl.po  hu.po  ja.po  ka.po  lt.po  metainfo.its  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sv.po  ta.po  th.po  tr.po  uk.po  zh_CN.po
rust/: Cargo.toml
rust/pspp/: Cargo.toml  README.md  build.rs
rust/pspp/fuzz/: Cargo.toml
rust/pspp/fuzz/fuzz_targets/: fuzz_target_1.rs  segment.rs
rust/pspp/src/: calendar.rs  command.rs  convert.rs  crypto.rs  data.rs  decrypt.rs  dictionary.rs  endian.rs  engine.rs  file.rs  format.rs  hexfloat.rs  identifier.rs  integer.rs  lex.rs  lib.rs  locale_charset.rs  macros.rs  main.rs  message.rs  output.rs  pc.rs  por.rs  prompt.rs  settings.rs  show.rs  show_pc.rs  show_por.rs  sys.rs  util.rs  variable.rs
rust/pspp/src/command/: crosstabs.rs  ctables.rs  data_list.rs  descriptives.rs  mod.rs
rust/pspp/src/crypto/: mod.rs
rust/pspp/src/crypto/testdata/: test-encrypted.sps  test.sps
rust/pspp/src/data/: encoded.rs
rust/pspp/src/file/testdata/: test-encoding.sps  test-encrypted.spv  test.por  test.sav  test.sps  test.spv
rust/pspp/src/format/: display.rs  mod.rs  parse.rs
rust/pspp/src/format/display/: mod.rs  test.rs  tests.rs
rust/pspp/src/format/testdata/display/: cca.txt  ccb.txt  ccc.txt  ccd.txt  cce.txt  comma.txt  dollar.txt  dot.txt  dtime10.txt  dtime11.txt  dtime12.txt  dtime13.1.txt  dtime13.txt  dtime14.1.txt  dtime14.2.txt  dtime14.txt  dtime15.1.txt  dtime15.2.txt  dtime15.3.txt  dtime15.txt  dtime16.1.txt  dtime16.2.txt  dtime16.3.txt  dtime16.4.txt  dtime16.txt  dtime17.1.txt  dtime17.2.txt  dtime17.3.txt  dtime17.4.txt  dtime17.5.txt  dtime17.txt  dtime18.1.txt  dtime18.2.txt  dtime18.3.txt  dtime18.4.txt  dtime18.5.txt  dtime18.6.txt  dtime18.txt  dtime8.txt  dtime9.txt  (+74 more)
rust/pspp/src/format/testdata/parse/: comma.txt  dollar.txt  dot.txt  e.txt  num-in.expected.txt  num-in.split.py  num-in.txt  pct.txt
rust/pspp/src/lex/: command_name.rs  lexer.rs  mod.rs  scan.rs  segment.rs  token.rs
rust/pspp/src/lex/scan/: mod.rs  test.rs  tests.rs
rust/pspp/src/lex/segment/: mod.rs  tests.rs
rust/pspp/src/output/: cairo.rs  csv.rs  driver.rs  html.rs  json.rs  mod.rs  page.rs  pivot.rs  render.rs  spv.rs  table.rs  text.rs  text_line.rs
rust/pspp/src/output/cairo/: driver.rs  fsm.rs  mod.rs  pager.rs
rust/pspp/src/output/pivot/: look_xml.rs  mod.rs  output.rs  test.rs  test1.tlo  tests.rs  tlo.rs
rust/pspp/src/pc/: tests.rs
rust/pspp/src/pc/testdata/: README.md  test1.expected  test1.sys  test2.expected  test2.sys
rust/pspp/src/por/: read.rs  write.rs
rust/pspp/src/por/testdata/: README.md  test1.expected  test1.por  test2.expected  test2.por
rust/pspp/src/sys/: cooked.rs  encoding.rs  mod.rs  raw.rs  sack.rs  test.rs  tests.rs  write.rs
rust/pspp/src/sys/raw/: records.rs
rust/pspp/src/sys/testdata/: attributes.expected  attributes.sack  bad_machine_float_info_size.expected  bad_machine_float_info_size.sack  bad_machine_integer_info_count.expected  bad_machine_integer_info_count.sack  bad_machine_integer_info_endianness.expected  bad_machine_integer_info_endianness.sack  bad_machine_integer_info_float_format.expected  bad_machine_integer_info_float_format.sack  bad_record_type.expected  bad_record_type.sack  bad_variable_name_in_long_string_value_label.expected  bad_variable_name_in_long_string_value_label.sack  bad_variable_name_in_variable_value_pair.expected  bad_variable_name_in_variable_value_pair.sack  bad_very_long_string_length.expected  bad_very_long_string_length.sack  bad_very_long_string_segment_width.expected  bad_very_long_string_segment_width.sack  compressed_data.expected  compressed_data.sack  compressed_data_other_bias.expected  compressed_data_other_bias.sack  compressed_data_zero_bias.expected  compressed_data_zero_bias.sack  documents.expected  documents.sack  duplicate_attribute_name.expected  duplicate_attribute_name.sack  duplicate_long_variable_name.expected  duplicate_long_variable_name.sack  duplicate_value_labels_type.expected  duplicate_value_labels_type.sack  duplicate_variable_name.expected  duplicate_variable_name.sack  empty_document_record.expected  empty_document_record.sack  extension_too_large.expected  extension_too_large.sack  (+163 more)
rust/pspp/tests/: sack.rs
src/: automake.mk
tests/: README  atlocal.in  automake.mk  coverage.sh  perl-module.at  testsuite.in  valgrind.supp
utilities/: automake.mk  pspp-convert.1  pspp-convert.c  pspp-dump-sav.1  pspp-dump-sav.c  pspp-output.1  pspp-output.c
(+1586 files in other folders)
