[package]
name = "pspp"
version = "0.1.0"
edition = "2024"
authors = [ "Ben Pfaff", "John Darrington" ]
description = "Statistical analysis software"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.7", features = ["derive", "wrap_help"] }
encoding_rs = "0.8.32"
flate2 = "1.0.26"
hexplay = "0.2.1"
num = "0.4.0"
ordered-float = "3.7.0"
thiserror = "1.0"
chrono = "0.4.40"
finl_unicode = "1.2.0"
unicase = "2.6.0"
libc = "0.2.147"
indexmap = "2.1.0"
bitflags = "2.5.0"
unicode-width = "0.2.0"
chardetng = "0.1.17"
enum-map = "2.7.3"
flagset = "0.4.6"
pspp-derive = { version = "0.1.0", path = "../pspp-derive" }
either = "1.13.0"
enum-iterator = "2.1.0"
smallvec = { version = "1.13.2", features = ["const_generics", "write"] }
libm = "0.2.11"
smallstr = "0.3.0"
itertools = "0.14.0"
unicode-linebreak = "0.1.5"
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.218", features = ["derive"] }
color = { version = "0.2.3", features = ["serde"] }
binrw = "0.14.1"
ndarray = "0.16.1"
derive_more = { version = "2.0.1", features = ["debug"] }
cairo-rs = { version = "0.20.7", features = ["ps", "png", "pdf", "svg"] }
pango = "0.20.9"
pangocairo = "0.20.7"
zip = "4.0.0"
xmlwriter = "0.1.0"
csv = "1.3.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Globalization"] }

[build-dependencies]
anyhow = "1.0.69"
flate2 = "1.0.26"

[[bin]]
name = "pspp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[[test]]
name = "sack"
path = "tests/sack.rs"
harness = false

[dev-dependencies]
diff = "0.1.13"
rand = "0.9.0"
