[package]
name = "pspp"
version = "0.4.0"
edition = "2024"
authors = [ "Ben Pfaff", "John Darrington" ]
description = "Statistical analysis software"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.7", features = ["derive", "wrap_help"] }
encoding_rs = { version = "0.8.32", features = ["serde"] }
flate2 = "1.0.26"
hexplay = "0.2.1"
num = "0.4.0"
ordered-float = "3.7.0"
thiserror = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
unicase = "2.6.0"
libc = "0.2.147"
indexmap = { version = "2.1.0", features = ["serde"] }
bitflags = "2.5.0"
unicode-width = "0.2.0"
chardetng = "0.1.17"
enum-map = { version = "2.7.3", features = ["serde"] }
flagset = "0.4.6"
pspp-derive = { version = "0.1.0", path = "../pspp-derive" }
either = "1.13.0"
enum-iterator = "2.1.0"
smallvec = { version = "1.13.2", features = ["const_generics", "write"] }
libm = "0.2.11"
smallstr = "0.3.0"
itertools = "0.14.0"
unicode-linebreak = "0.1.5"
quick-xml = { version = "0.37.2", features = ["serialize"] }
serde = { version = "1.0.218", features = ["derive", "rc"] }
color = { version = "0.2.3", features = ["serde"] }
binrw = "0.14.1"
ndarray = "0.16.1"
derive_more = { version = "2.0.1", features = ["debug"] }
cairo-rs = { version = "0.20.7", features = ["ps", "png", "pdf", "svg"] }
pango = "0.20.9"
pangocairo = "0.20.7"
zip = "4.0.0"
xmlwriter = "0.1.0"
csv = "1.3.1"
cmac = "0.7.2"
aes = "0.8.4"
readpass = "1.0.3"
zeroize = "1.8.1"
unicode-properties = "0.1.3"
unicode-segmentation = "1.12.0"
serde_json = "1.0.141"
toml = "0.9.5"
hashbrown = { version = "0.15.5", features = ["serde"] }
displaydoc = "0.2.5"
codepage-437 = "0.1.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_Globalization"] }

[build-dependencies]
anyhow = "1.0.69"

[[bin]]
name = "pspp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dev-dependencies]
diff = "0.1.13"
rand = "0.9.0"
